--- a/src/App.css
+++ b/src/App.css
@@ -17,8 +17,9 @@ body {
 }
 
 .logo {
-  width: 120px;
-  margin: 0 auto 1rem;
+  width: 200px;
+  max-width: 80%;
+  margin: 0 auto 1.5rem;
 }
 
 .title {
